did necessary changes

--- a/AR-Server/index.html
+++ b/AR-Server/index.html
@@ -16,12 +16,9 @@
     }
   </style>
   <body style="margin: 0px; overflow: hidden">
-    <select
-      id="modelSelect"
-      style="position: fixed; top: 10px; left: 10px; z-index: 1000"
-    >
+    <select id="modelSelect">
       <option value="./model.gltf">Model 1</option>
-      <option value="./model.gltf">Model 2</option>
+      <option value="./model2.gltf">Model 2</option>
       <!-- Add more options as needed -->
     </select>
     <a-scene embedded arjs>
